2003-04-06 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.2 Released.
  * Fixed section size bug in org directives when used in gpasm coff outputs.
  * Fixed bug in cod file address size that confused MPLAB.
  * Fixed bug in lexer when < and > were used in the same expression.
  * Prevented symbols from absolute sections from being updated after
    relocation.
  * Added feature so gplink now loads a default linker script if one is not
    specified.
  * Updated header files.
  * Updated linker scripts.
  * Added configuration settings for OS/2 host.
  * Modified lexer to allow [.][a-z][a-z0-9]* labels.
  * Moved gpasm default header path to last in the search list.

2003-04-02 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.1 Released.

2003-03-23 Craig Franklin <craigfranklin@attbi.com>
  * Moved common cod functions into libgputils.
  * Added cod file output to gplink.
  * Updated config scripts.
  * Added variable bsr boundary location for default access bit on 18xx
    devices.

2003-03-21 Craig Franklin <craigfranklin@attbi.com>
  * Check status of all fopens to prevent file io problems.

2003-03-14 Craig Franklin <craigfranklin@attbi.com>
  * Specified fopen() mode to prevent CRLF conversion on binary files when
    using the mingw port.
  * Fixed gplink bug that causes some symbols to be incorrect after section
    merging.
  * Report symbol names when resolving external references in gplink fails.

2003-03-14 Craig Franklin <craigfranklin@attbi.com>
  * gputils 0.11.0 Released.
  * Fixed bug that caused amode stack to be incorrect when exitm was used.
  * The P value for movpf and movfp instructions is now checked.
  * Added check for invalid destinations with movff instructions.
  * Cleared defines table at the start of second pass.
  * Generate a warning for macros only invoked on pass 2.

2003-03-09 Craig Franklin <craigfranklin@attbi.com>
  * Fixed segmentation fault in gplink.